# pnid-ocr-extraction

./: .env.example  .gitignore  .rules  OPENCV_INTEGRATION_SUMMARY.md  PIPE_ROUTE_RESULTS.md  PROJECT_SETUP_COMPLETE.md  README.md  ROUTE_PRESERVATION_COMPARISON.md  WORKFLOW_AND_COMPARISON.md  demo_comparison.sh  pyproject.toml  requirements.txt
data/input/: Diagramas P&ID.dwg  Diagramas P&ID.dxf  Piping-And-Instrumentation-Diagrams.dwg  Piping-And-Instrumentation-Diagrams.dxf  simple_pid_example.dxf
data/output/: opencv_edges.json  opencv_edges_llm_prompt.txt  pnid.json  pnid_azure_gpt51.json  pnid_azure_gpt52.json  pnid_c01_reference.dxf  pnid_dexpi_complete.json  pnid_dexpi_complete_with_coords.json  pnid_dexpi_converted.dxf  pnid_dexpi_final.json  pnid_dexpi_pump_hex.json  pnid_dexpi_tank.json  pnid_dexpi_with_coords.dxf  pnid_dwg.json  pnid_enhanced.json  pnid_focus_graph.json  pnid_from_paddle_anthropic.json  pnid_gemini.json  pnid_llm_only.json  pnid_merged.json  pnid_merged_fixed.json  pnid_piping_dwg.json  pnid_route_based.json  pnid_simple.json  pnid_skeleton_mapped.json  pnid_skeleton_prompt.txt  pnid_three_step.json  three_step_edges.json  three_step_ocr.json
data/variations/: index.json  pnid_c01_var_001_remove_components_medium.json  pnid_c01_var_002_remove_components_medium.json  pnid_c01_var_003_modify_names_medium.json  pnid_c01_var_004_modify_names_medium.json  pnid_c01_var_005_add_components_medium.json  pnid_c01_var_006_combined_heavy_medium.dxf  pnid_c01_var_006_combined_heavy_medium.json  pnid_c01_var_007_add_components_medium.json  pnid_c01_var_008_change_types_medium.json  pnid_c01_var_009_perturb_positions_medium.json  pnid_c01_var_010_add_components_medium.json  pnid_c01_var_011_perturb_positions_medium.json  pnid_c01_var_012_combined_light_medium.json  pnid_c01_var_013_perturb_positions_medium.json  pnid_c01_var_014_combined_light_medium.json  pnid_c01_var_015_perturb_positions_medium.json  pnid_c01_var_016_modify_names_medium.json  pnid_c01_var_017_combined_heavy_medium.json  (+3 more)
docs/: COMPARISON_GUIDE.md  COMPARISON_TOOL_SUMMARY.md  DEEPSEEK_OCR_LIMITATIONS.md  DWG_FILE_ANALYSIS.md  LLM_COMPARISON_GUIDE.md  LOCAL_OCR_GUIDE.md  OPENCV_EDGE_DETECTION.md  PIPING_DIAGRAM_SUCCESS.md  PNID_AGENT_USAGE.md  PROJECT_SETUP_COMPLETE.md  README.md  README_OCR_BoundingBox.md  STATUS_SUMMARY.md  THREE_STEP_PIPELINE.md  TRANSFER_TO_BOUVET.md  WORKFLOW_AND_COMPARISON.md
examples/: brewery.json
src/: azure_antropic_agent.py  azure_deepseek_agent.py  compare_bbox_scaling.py  compare_pnid_jsonld.py  compare_pnid_llm.py  convert_dwg_to_dxf.py  debug_bbox.py  dexpi_reader.py  dexpi_visualizer.py  dwg_reader.py  easyocr_extract.py  gemini_agent.py  generate_pnid_variations.py  jsonld_to_dxf.py  ocr_bbox_overlay.py  ocr_cli.py  ocr_with_bbox_demo.py  ollama_deepseel_ocr_fixed.py  opencv_edge_extraction.py  opencv_test.py  overlay_coordinates.py  paddle_ocr_extract.py  plot_pnid_graph.py  pnid_agent.py  run_overlay_demo.py  skeleton_path_mapping.py  three_step_pipeline.py
src/ocr_approach/: README.md  (+13 more)
(+55 files in other folders)
