[project]
name = "pnid-ocr-extraction"
version = "0.1.0"
description = "P&ID OCR & Graph Extraction - Extract structured information from Process & Instrumentation Diagrams"
authors = [
    { name = "Bouvet ASA" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
keywords = ["ocr", "pnid", "process-diagram", "graph-extraction", "ai", "deepseek", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "Pillow>=9.0.0",
    "requests>=2.25.0",
    "pydantic-ai",
    "python-dotenv",
    "pyvis>=0.3.0",
    "networkx>=3.0",
    "anthropic",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "easyocr>=1.7.0",
    "ezdxf>=1.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bouvet/pnid-ocr-extraction"
Documentation = "https://github.com/bouvet/pnid-ocr-extraction/tree/main/docs"
Repository = "https://github.com/bouvet/pnid-ocr-extraction"
Issues = "https://github.com/bouvet/pnid-ocr-extraction/issues"

[project.scripts]
pnid-visualize = "src.plot_pnid_graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyvis.*",
    "anthropic.*",
    "pydantic_ai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
